<resources>
    <string name="app_name">Wgbat</string>
    <string name="ScrollViewContent">Scrollable Screen</string>
    <string name="mealOfDay">Meals of the day</string>
    <string name="recently">Recently viewed</string>
    <string name="addToSchedule">Add To Plan</string>
    <string name="seeAll">See All</string>
    <string name="filter">Filter by:</string>
    <string name="meal">Meal</string>
    <string name="category">Category</string>
    <string name="ingredents">Ingredients</string>
    <string name="noresults">0 Results</string>
    <string name="category_one">Seafood</string>
    <string name="category_two">Breakfast</string>
    <string name="country_one">Egyptian food</string>
    <string name="country_two">Canadian food</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="removeFromFavorites">Remove</string>
    <string name="header_image_alt">Main image for the meal</string>
    <string name="instructions">STEP 1\r\nHeat the oil in a pan, fry the sliced onion until golden brown, then add the tonkatsu (see recipe here), placing it in the middle of the pan. Mix the dashi, soy, mirin and sugar together and tip three-quarters of the mixture around the tonkatsu. Sizzle for a couple of mins so the sauce thickens a little and the tonkatsu reheats.\r\n\r\nSTEP 2\r\nTip the beaten eggs around the tonkatsu and cook for 2-3 mins until the egg is cooked through but still a little runny. Divide the rice between two bowls, then top each with half the egg and tonkatsu mix, sprinkle over the chives and serve immediately, drizzling with a little more soy if you want an extra umami kick.</string>
    <string name="favButton">Add to favorites</string>
    <string name="toolbar_title">Wgbat</string>
    <string name="user_name">enter user name</string>
    <string name="email">enter email</string>
    <string name="password">enter password</string>
    <string name="confirmPassword">confirm password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgetPassword"><u>Forget Password</u>.</string>
    <string name="notRegistered">Not Registered ..?</string>
    <string name="google_signIn">Google</string>
    <string name="sign_up"><u>Sign Up</u>.</string>
    <string name="signWith">Sign with</string>
    <string name="showMeals">Meals</string>
    <string name="landingMsg">Watch,save,plan,and make the recipe by yourself.</string>
    <string name="already_registered">Already registered..?</string>
    <string name="tv_signIn_register"><u>Sign In</u>.</string>
    <string name="sign_anontmously">"Or you can sign "</string>
    <string name="anonymously"><u>Anonymously</u>.</string>
    <string name="logout">Logout</string>
</resources>