<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_screen.view.LoginScreenController"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_emailTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#B3FFFFFF"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/et_emailTextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/et_emailTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/et_emailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#B3FFFFFF"
                android:inputType="textEmailAddress"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_button_style"
            android:text="@string/sign_in"
            android:textColor="#3DC794"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/passwordTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/forgitPassword" />

        <Button

            android:id="@+id/btn_googleSignIn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/login_button_style"
            android:text="@string/google_signIn"
            android:textAlignment="center"
            android:textColor="#3DC794"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/btn_signIn"
            app:layout_constraintStart_toStartOf="@+id/btn_signIn"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:strokeColor="#1885F6" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="28dp"
            android:src="@drawable/google__g__logo"
            app:layout_constraintBottom_toBottomOf="@+id/btn_googleSignIn"
            app:layout_constraintStart_toStartOf="@+id/btn_googleSignIn"
            app:layout_constraintTop_toTopOf="@+id/btn_googleSignIn"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:text="@string/notRegistered"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_googleSignIn"
            app:layout_constraintStart_toStartOf="@+id/btn_googleSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btn_googleSignIn" />


        <TextView
            android:id="@+id/forgitPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FEFEFE"
            android:text="@string/forgetPassword"
            android:textColor="#3DC794"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="#00FEFEFE"
            android:text="@string/sign_up"
            android:textColor="#3DC794"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/signWith"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_signIn"
            app:layout_constraintStart_toStartOf="@+id/btn_signIn"
            app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>