<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mealScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ScrollViewContent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mealConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".meal_screen.MealFragment" >
        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            tools:src="@mipmap/image1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/header_image_alt"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mealTitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@id/headerImage"
            app:layout_constraintBottom_toBottomOf="@id/headerImage"
            app:cardElevation="6dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/recipe"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/recipe"
                    android:textStyle="bold"
                    android:text="Recipe"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/mealMainTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:text="Open-Faced Pesto Egg Sandwich"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/recipe"
                    app:layout_constraintStart_toStartOf="@+id/recipe"
                    app:layout_constraintTop_toTopOf="@+id/recipe"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/mealInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:padding="20dp"
            android:text="@string/instructions"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealTitleCard" />

        <TextView
            android:id="@+id/IngredientsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/ingredents"
            app:layout_constraintTop_toBottomOf="@id/mealInstructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ingredients_rec"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredients_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/IngredientsTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>